# poe-api-bots

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml
bot/: bot.py  configs.py  log_utils.py  logger.py  models.py  test.py
docker/: docker-compose.yml
docker/configs/: config.bot2.toml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: bot.conf  poe.conf
