[project]
name = "poe-api-bots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
    "fastapi-poe>=0.0.48",
    "langchain>=0.3.9",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.10",
    "toml>=0.10.2",
]
